test/scc_test/exp/semantic-errors/048.a
048.t:4:9: error: expression must have integral type